--- a/workflow/charts/registry/templates/registry-deployment.yaml
+++ b/workflow/charts/registry/templates/registry-deployment.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.global.registry_location "on-cluster" }}
-apiVersion: extensions/v1beta1
+apiVersion: {{ template "APIVersion" . }}
 kind: Deployment
 metadata:
   name: deis-registry
