--- a/workflow/charts/router/values.yaml
+++ b/workflow/charts/router/values.yaml
@@ -1,6 +1,6 @@
-org: "hephy"
+org: "quay.io/kingdonb"
 pull_policy: "IfNotPresent"
-docker_tag: v2.17.0
+docker_tag: k8s-1-16-chart-update
 platform_domain: ""
 dhparam: ""
 # limits_cpu: "100m"
