set nginx-ingress to tcp forward 2222 for builder

--- a/releases/nginx-ingress.yaml
+++ b/releases/nginx-ingress.yaml
@@ -17,6 +17,8 @@ spec:
     name: nginx-ingress
     version: 1.40.2
   values:
+    tcp:
+      2222: "deis/deis-builder:2222"
     controller:
       hostNetwork: true
       daemonSet:
