--- a/releases/oauth2-proxy.yaml
+++ b/releases/oauth2-proxy.yaml
@@ -18,7 +18,7 @@ spec:
     version: 3.2.0
   values:
     config:
-      existingSecret: myservice-oauth2-secret
+      existingSecret: hephynator-oauth2-secret
     extraArgs:
       provider: "github"
       github-user: "yebyen,kingdonb,cryptophobia"
