github-user isn't a real option
It is described in oauth2-proxy docs but it isn't recognized.

--- a/releases/oauth2-proxy.yaml
+++ b/releases/oauth2-proxy.yaml
@@ -21,7 +21,7 @@ spec:
       existingSecret: hephynator-oauth2-secret
     extraArgs:
       provider: "github"
-      github-user: "yebyen,kingdonb,cryptophobia"
+      github-team: "kingdon-ci"
     ingress:
       enabled: true
       path: /oauth2
