--- a/releases/oauth2-proxy.yaml
+++ b/releases/oauth2-proxy.yaml
@@ -29,7 +29,7 @@ spec:
         - hephynator.team.hephy.rocks
       annotations:
         kubernetes.io/ingress.class: nginx
-        certmanager.io/cluster-issuer: letsencrypt-staging
+        cert-manager.io/cluster-issuer: letsencrypt-staging
       tls:
       - secretName: hephynator-tls
         hosts:
