add namespace to issuer, use kingdonb everywhere
Since we only have access to one namespace, and CRDs are preinstalled
for us, things are actually much easier for us.

Use the kingdonb namespace everywhere, and change any cluster-wide
resources to not be cluster-wide. We will get access to a privileged
helm-operator later for other namespaces, that can be installed
by a cluster-admin or somehow otherwise out-of-band.

Also, upgrade to latest SealedSecrets chart release.

--- a/releases/sealed-secrets.yaml
+++ b/releases/sealed-secrets.yaml
@@ -1,16 +1,16 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: adm
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: adm
+# ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: sealed-secrets
-  namespace: adm
+  namespace: kingdonb
 spec:
   releaseName: sealed-secrets
   chart:
     repository: https://kubernetes-charts.storage.googleapis.com/
     name: sealed-secrets
-    version: 1.10.2
+    version: 1.10.3
