--- a/releases/cert-manager.yaml
+++ b/releases/cert-manager.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cert-manager
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: cert-manager
+# ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: cert-manager
-  namespace: cert-manager
+  namespace: kingdonb
   annotations:
     fluxcd.io/automated: "false"
 spec:
@@ -15,14 +15,15 @@ spec:
   chart:
     repository: https://charts.jetstack.io
     name: cert-manager
-    version: v0.15.2
+    version: v0.16.1
   values:
-    installCRDs: true
+    installCRDs: false
 ---
 apiVersion: cert-manager.io/v1alpha2
-kind: ClusterIssuer
+kind: Issuer
 metadata:
   name: letsencrypt-staging
+  namespace: kingdonb
 spec:
   acme:
     email: kingdon@teamhephy.com
