--- a/releases/hephy-workflow.yaml
+++ b/releases/hephy-workflow.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: deis
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: deis
+# ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: hephy
-  namespace: deis
+  namespace: kingdonb
   annotations:
     fluxcd.io/automated: "false"
 spec:
@@ -15,7 +15,7 @@ spec:
   chart:
     git: git@github.com:kingdonb/gitops-hephy
     path: workflow
-    ref: master
+    ref: kingdonb
     skipDepUpdate: true
   values:
     global:
