--- a/releases/nginx-ingress.yaml
+++ b/releases/nginx-ingress.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: nginx-ingress
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: nginx-ingress
+# ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
