--- a/releases/oauth2-proxy.yaml
+++ b/releases/oauth2-proxy.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: oauth2-proxy
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: oauth2-proxy
+# ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: oauth2-proxy
-  namespace: oauth2-proxy
+  namespace: kingdonb
   annotations:
     fluxcd.io/automated: "false"
 spec:
