try router (image is the same as git-e3f891f)

--- a/releases/hephy-workflow.yaml
+++ b/releases/hephy-workflow.yaml
@@ -23,7 +23,7 @@ spec:
       database_location: on-cluster
       use_rbac: true
       use_cni: true
-      experimental_native_ingress: true
+      experimental_native_ingress: false
     controller:
       platform_domain: team.hephy.rocks
     router:
