ignore some helm releases for now

--- a/releases/nginx-ingress.yaml
+++ b/releases/nginx-ingress.yaml
@@ -10,6 +10,7 @@ metadata:
   namespace: kingdonb
   annotations:
     fluxcd.io/automated: "false"
+    fluxcd.io/ignore: "true"
 spec:
   releaseName: ingress
   chart:
