--- a/releases/oauth2-proxy.yaml
+++ b/releases/oauth2-proxy.yaml
@@ -10,6 +10,7 @@ metadata:
   namespace: kingdonb
   annotations:
     fluxcd.io/automated: "false"
+    fluxcd.io/ignore: "true"
 spec:
   releaseName: oauth2-proxy
   chart:
